[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.589
margin_top = -42.6678
margin_right = 304.411
margin_bottom = 116.332
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps"
align = 1
autowrap = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BlackHoleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.6974
margin_top = -260.026
margin_right = 72.3026
margin_bottom = -171.026
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 71.6069
margin_top = -609.856
margin_right = 136.607
margin_bottom = -545.856
custom_fonts/font = SubResource( 3 )
text = "+"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SubtractButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -148.834
margin_top = -611.022
margin_right = -83.8337
margin_bottom = -547.022
custom_fonts/font = SubResource( 3 )
text = "-"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.3604
margin_top = -170.442
margin_right = 104.14
margin_bottom = -73.4966
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 95.6422
margin_top = 207.495
margin_right = 390.642
margin_bottom = 286.495
custom_fonts/font = SubResource( 4 )
text = "Dynamic"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="SubtractButton" to="." method="_on_SubtractButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
